# whats-next

./: .gitignore  LICENSE  README.md  data_generation.py  main.py  pyproject.toml
whatsnext/: __init__.py  book_embedding.py  constants.py  data_generation.py  rec_engine.py
